# SSNS_Indoor_Air_Polution_Detector

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay
drivers/sensor/: CMakeLists.txt
drivers/sensor/sensirion_lib/: CMakeLists.txt  sensirion_common.h  sensirion_i2c.c
drivers/sensor/sps30/: CMakeLists.txt  KConfig  default_config.inc  sps30.c  sps30.h
src/: main.c  main_2.c
